--- a/chap-moreexamples.tex
+++ b/chap-moreexamples.tex
@@ -54,7 +54,7 @@ included documentation file.
 
 {\em Note:} This paper is not to be read in any form for content.
 The conglomeration of equations, lemmas, and other text elements were
-put together solely for typographic illustrative purposes and don't
+put together solely for typographic illustrative purposes and do not
 make any sense as lemmas, equations, etc.
 
 \subsection{Sample text}\index{Sample text}
