--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -119,7 +119,9 @@
 - focusing on why this is a valid model
 - maybe explain clamping here and leave it out everywhere else?
 
-\todo[color=green]{formatting requirements? like that comma after e.g. weirdness}
+\todo[color=white]{formatting requirements? like that comma after e.g. weirdness}
+
+\todo[color=white]{explain clamping in concept}
 
 % \include{chap-examples}
 % \include{chap-moreexamples}
