--- a/chap-results.tex
+++ b/chap-results.tex
@@ -26,30 +26,48 @@ Unless otherwise noted, the parameters used for the measurements and screenshots
 \noindent
 The hardware specification of the testing system is as follows:
 \begin{outline}
-    \1 Intel Xeon dadada
-    \1 NVIDIA GeForce GTX 750 Ti, locked to xxx Mhz for reproducible results
-    \1 mainboard?
-    \1 other stuff?
+    \1 Intel Xeon W3530 with four cores at 2.8\,Ghz
+    \1 NVIDIA GeForce GTX 980 factory-overclocked by ca. 4\%, driver version 375.57
 \end{outline}
 
-\todo{hardware specifications}
 
 \section{RSM Generation and VPL Sampling}
 \label{sec:results:RsmAndVplSampling}
-\begin{outline}
-\1 RSM generation is the same as G-Buffer generation, possibly with a different resolution. as said earlier, depending on the specific use case, this rendering pass can also render the shadow map.
-\1 screenshot of RSM G-buffers
 
-\1 VPL sampling takes fractions of a millisecond and is negligible. bear in mind that in order to achieve high quality levels, a more elaborate sampling algorithms needs to be implemented, which can actually take most of the available time. See \citep{hedman2016sequential} for an advanced sampling algorithm.
-\1 screenshots of debug splotches visualized
+\begin{figure}[htb]
+\centering
+  \begin{tabular}{@{}cc@{}}
+    \multicolumn{2}{c}{\includegraphics[width=1.0\textwidth]{screenshots/RSM_diffuse}} \\
+    \includegraphics[width=.48\textwidth]{screenshots/RSM_normal} &
+    \includegraphics[width=.48\textwidth]{screenshots/RSM_depth}
+  \end{tabular}
+  \caption{A reflective shadow map, with its diffuse, normal and depth buffer.}
+  \label{fig:results:RSMBuffers}
+\end{figure}
 
-\1 our sampling pays no attention to relevance to the current frame and wastes budget on lights contributing little or nothing
-\1 screenshot of VPLs on the roof
 
-\1 our sampling has the additional downside of poor temporal stability when the scene light moves. this is due to each VPL staying at the exact same position in the light's viewport, so it ``follows'' the light's movements in a certain way, jumping over depth discontinuities along the way.
+As explained before, the RSM generation re-uses most of the code of the G-Buffer generation, see \Cref{fig:results:RSMBuffers} for an impression on the rendered result. Accordingly, the performance characteristics are similar to the regular geometry pass of deferred renderers.
 
-\1 frame-to-frame coherency here? two screenshots with diff.
-\end{outline}
+Since the implemented VPL sampling distributes the samples over the entire shadow map, we simply limited the VPL's location to the relevant area by tuning the light's extents. As a result, an aspect ratio chosen specifically for each test scene is used.
+
+As our implementation re-uses the RSM as shadow map for direct lighting, we chose a resolution of 512\,px² (or, in the case of the Sponza scene, 1024x256\,px), which is more than required by the naive VPL sampling. The RSM is rendered in 0.17\,ms for the Sponza scene.
+
+The VPL sampling itself takes only several microseconds and is negligible. Bear in mind that, in order to achieve high quality levels, a more elaborate sampling algorithms needs to be implemented, which can actually take most of the available time.
+
+\begin{figure}[htb]
+\centering
+  \begin{tabular}{@{}c@{}}
+    \includegraphics[width=1.0\textwidth]{screenshots/RSM_unfavorable} \\
+  \end{tabular}
+  \caption{Inefficiently placed VPLs. Since there is no further geometry in the hemisphere they illuminate, they do not contribute to the final image.}
+  \label{fig:results:RSMUnfavorable}
+\end{figure}
+
+The sampling does not regard the relevance of the sampled VPLs to the current frame and causes the entire system to be rather inefficient by choosing lights that contribute little or nothing to the rendered output. See \Cref{fig:results:RSMUnfavorable} for an example of unfavorable VPL locations.
+
+An additional downside of the naive sampling is the poor temporal stability when the scene light moves. This is due to each VPL staying at the exact same position in the light's viewport, so it strictly ``follows'' the light's movement, jumping over depth discontinuities along the way. See \Cref{???} for a figure visualizing the frame-to-frame coherency.
+
+\todo{several screenshots. maybe one screenshot just for debug splotches.}
 
 
 \section{ISM Rendering}
@@ -145,7 +163,7 @@ Our implementation hides some of the inaccuracies of the ISMs by using a relativ
     \begin{tabulary}{0.98\textwidth}{| L | L | L | L |}
         \hline
         Splat Default Settings & Single-Pixel Default Settings & Splat with Single-Pixel Settings & Single-Pixel with Splat Settings \\ \hline
-        3.4\,ms & 8.5\,ms & 38\,ms & 6.2\,ms \\
+        1.08\,ms & 2.74\,ms & 10.14\,ms & 2.31\,ms \\
         \hline
     \end{tabulary}
     \caption{Timings of the ISM renderers with different settings.}
@@ -155,11 +173,11 @@ Our implementation hides some of the inaccuracies of the ISMs by using a relativ
 
 \Cref{tab:results:ism_timings} shows the time needed for rendering the ISMs with both renderers and different settings.
 
-Note that the comparison between the two renderers with default settings is not a fair one, since the single-pixel renderer uses more points and performs clamping per default. If the splat renderer is changed to behave similarly, it takes one additional millisecond for the clamping, and 33 additional milliseconds for using the same technique to collect VPLs as the single-pixel renderer does. There are several reasons for this heavy slowdown: First, we implemented this by emitting multiple vertices in the geometry shader, which is known to have poor performance on current GPUs. Second, the additional fillrate and overdraw became an issue when using too many points, a bottleneck that is unlikely to occur when using the single-pixel renderer. And third, while the single-pixel renderer uses shared memory to load the 16 VPLs once, the fragment shader of the splat renderer has no access to shared memory and has to load all 16 VPLs per invocation, creating high register pressure.
+Note that the comparison between the two renderers with default settings is not a fair one, since the single-pixel renderer uses more points and performs clamping per default. If the splat renderer is changed to behave similarly, it takes 0.3 additional milliseconds for the clamping, and 8.66 additional milliseconds for using the same technique to collect VPLs as the single-pixel renderer does. There are several reasons for this heavy slowdown: First, we implemented this by emitting multiple vertices in the geometry shader, which is known to have poor performance on current GPUs. Second, the additional fillrate and overdraw became an issue when using too many points, a bottleneck that is unlikely to occur when using the single-pixel renderer. And third, while the single-pixel renderer uses shared memory to load the 16 VPLs once, the fragment shader of the splat renderer has no access to shared memory and has to load all 16 VPLs per invocation, creating high register pressure.
 
-Conversely, if the single-pixel renderer does not perform clamping, the push phase needs 0.3\,ms less (2.4\,ms to 2.1\,ms), and when it considers only one VPL per point, the point renderer uses 2.0\,ms less (2.9\,ms to 0.9\,ms).
+Conversely, if the single-pixel renderer does not perform clamping, the push phase needs 0.07\,ms less (0.85\,ms to 0.78\,ms), and when it considers only one VPL per point, the point renderer uses 0.41\,ms less (0.65\,ms to 0.24\,ms).
 
-Since the technique implements no adaptivity, these numbers are independent from the viewport. They are however slightly affected by VPL placement, since it influences culling. In a second scenario, where the sunlight shines directly from above, all VPLs are placed on the floor facing up. As a result, much fewer points are culled during ISM rendering, resulting in slightly higher timings. The splat renderer needed an additional 0.7\,ms, whereas the single-pixel renderer needed only 0.2\,ms more.
+Since the technique implements no adaptivity, these numbers are independent from the viewport. They are however slightly affected by VPL placement, since it influences culling. In a second scenario, where the sunlight shines directly from above, all VPLs are placed on the floor facing up. As a result, much fewer points are culled during ISM rendering, resulting in slightly higher timings. Both renderers need about 0.1\,ms more in this case.
 
 \todo{Numbers when enlarging the points / making them smaller. Discuss. Note how the single-pixel renderer is (hopefully) not affected by point size.}
 
@@ -175,7 +193,7 @@ Since the technique implements no adaptivity, these numbers are independent from
     \begin{tabulary}{0.98\textwidth}{| L | L | L | L || L |}
         \hline
         Point Collection & Point Rendering & Pull Phase & Push Phase & Total\\ \hline
-        2.1\,ms & 3.0\,ms & 1.0\,ms & 2.4\,ms & 8.5\,ms\\
+        0.83\,ms & 0.65\,ms & 0.39\,ms & 0.85\,ms & 2.72\,ms\\
         \hline
     \end{tabulary}
     \caption{Timing breakdown of the single-pixel point renderer.}
@@ -188,7 +206,7 @@ Since the technique implements no adaptivity, these numbers are independent from
     \begin{tabulary}{0.98\textwidth}{| L | L | L | L | L | L | L | L || L | L || L |}
         \hline
         PL 1 & PL 2 & PL 3 & PL > 3 & PS > 2 & PS 2 & PS 1 & PS 0 & PL Total & PS Total & Total \\ \hline
-        0.57 & 0.34 & 0.10 & 0.04 & 0.09 & 0.19 & 0.71 & 1.47 & 1.05 & 2.46 & 3.5\\
+        0.16 & 0.16 & 0.04 & 0.03   & 0.06   & 0.08 & 0.30 & 0.41 & 0.39     & 0.85     & 2.72\\
         \hline
     \end{tabulary}
     \caption{Timing breakdown of the pull (PL) and push (PS) phase. The numbers of the individual steps indicate to which mipmap level they write, which is why the pull phase starts with 1 and the push phase has descending numbers. All timings are in milliseconds.}
